--- a/apps/api/.gitignore
+++ b/apps/api/.gitignore
@@ -56,3 +56,8 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 /generated/prisma
+
+# Ignore everything in prisma folder
+/prisma/*
+# But keep schema.prisma
+!/prisma/schema.prisma
